--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: grid;
+  grid-template: repeat(3, 1fr);
+  gap: 1rem;
+  font-family: sans-serif;
+  text-align: center;
+  padding: 4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+  width: 100px;
+  height: 100px;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+.green {
+  background-color: green;
+}
+
+.box:nth-child(5),
+.box:nth-child(6),
+.box:nth-child(7) {
+  grid-row: 3;
+}
+
+.box:nth-child(5) {
+  grid-column: 1;
+}
+
+.box:nth-child(6) {
+  grid-column: 2;
+}
+
+.box:nth-child(7) {
+  grid-column: 3;
+}
+
+button {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
 }
